--- a/application.yml
+++ b/application.yml
@@ -9,4 +9,7 @@ spring:
         git:
           # 配置git仓库地址
           uri: https://github.com/ZhangXiaoQ/spring-cloud-config.git
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka # 配置eureka服务器地址
