--- a/product.yml
+++ b/product.yml
@@ -6,3 +6,13 @@ spring:
     username: root
     password: admin,1
     url: jdbc:mysql://127.0.0.1:3306/zyqtest?characterEncoding=utf-8&useSSL=false
+
+#mybatis的相关配置
+mybatis:
+  #mapper配置文件位置
+  mapper-locations: classpath:mapper/*.xml
+  #配置xml文件中resultType返回值的包位置
+  type-aliases-package: com.itzyq.product.entity
+  #开启驼峰命名
+  configuration:
+    map-underscore-to-camel-case: true
