--- a/product.yml
+++ b/product.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: test
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: admin,1
-    url: jdbc:mysql://127.0.0.1:3306/zyqtest?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/zyqtest?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 
 #mybatis的相关配置
 mybatis:
